--- a/be/package.json
+++ b/be/package.json
@@ -5,19 +5,27 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.35.0",
+    "@heyputer/puter.js": "^2.2.5",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "baileys": "^7.0.0-rc.9",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "fs-extra": "^11.3.3",
+    "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
