--- a/bot/package.json
+++ b/bot/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@google/genai": "^1.35.0",
-    "dotenv": "^17.2.3"
+    "baileys": "^7.0.0-rc.9",
+    "dotenv": "^17.2.3",
+    "qrcode-terminal": "^0.12.0"
   }
 }
